# CodeMentor

./: README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 111f922db2ae_github_oauth.py  5a3315632af3_model.py  8ecc4b21df9f_init.py  a1b2c3d4e5f6_add_user_and_challenge_solution.py  d2f359dd8d05_core_models.py  f33ff101ed02_fix.py
backend/app/: dependencies.py  main.py  model.py  models.py  schemas.py  schemes.py
backend/app/core/: config.py  path_conf.py
backend/app/errors/: handlers.py
backend/app/routers/: __init__.py
backend/app/routers/v1/: __init__.py  auth.py  challenges.py  healthcheck.py  progress.py  solutions.py  tags.py
backend/app/utils/: exception_handler.py  link_challenges_tags.py  response.py  security.py
frontend/: components.json  openapi.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/catalog/: page.tsx
frontend/app/github_callback/: page.tsx
frontend/app/login/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/overview/[id]/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/publication/: page.tsx
frontend/app/publication/review/: page.tsx
frontend/app/register/: page.tsx
frontend/constants/: api.ts
frontend/lib/: api.ts
frontend/react/components/ui/: button-group.tsx  card-overview.tsx  card-publication.tsx  challenge-card.tsx  combobox.tsx  counter.tsx  field.tsx  footer.tsx  header.tsx  input-group.tsx  password-input.tsx
frontend/react/context/: auth-context.tsx
(+1 files in other folders)
