[project]
name = "backend"
version = "0.1.0"
description = "backend of CodeMentor website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]
